# genai-agent1

./: Dockerfile  README.md  config.py  pyproject.toml  requirements.txt
backend/: main.py
data/vector_store/: index.faiss  index.pkl
frontend/: app.py
rag_core/: simple_rag.py
